# SPN-Generation-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GraphGenerator.h  GraphGenerator.hpp  PetriNet.h  PetriNet.hpp  ReachabilityGraph.h  ReachabilityGraph.hpp  SPNAnalysis.h  SPNAnalysis.hpp  SPNAnalysisResult.h
src/: GraphGenerator.cpp  PetriNet.cpp  ReachabilityGraph.cpp  SPNAnalysis.cpp  main.cpp
tests/: test_GraphGenerator.cpp  test_Integration.cpp  test_PetriNet.cpp  test_ReachabilityGraph.cpp  test_SPNAnalysis.cpp
